# nifty-trader

./: .env.example  .gitignore  README.md  pyproject.toml
benchmarks/: bench_decisions.py
config/: mcx-crudeoilm.yaml  settings.yaml
docs/: VENOM-TRADING-GUIDE.md  dhan-api-guide.md
docs/plans/: 2026-03-07-venom-plan-part1.md  2026-03-07-venom-plan-part2.md  2026-03-07-venom-plan-part3.md  2026-03-07-venom-system-design.md  2026-03-09-backtest-fix-improve-design.md
scripts/: backtest.py  download_instruments.py
src/nifty_trader/: config.py  constants.py  main.py  state.py  venom.py
src/nifty_trader/alerts/: notifier.py
src/nifty_trader/analysis/: __init__.py  eod_analyzer.py  goal_tracker.py  learning_journal.py  report_generator.py
src/nifty_trader/backtest/: __init__.py  engine.py  report.py  simulator.py
src/nifty_trader/core/: persister.py
src/nifty_trader/dashboard/: console.py
src/nifty_trader/data/: feed.py  historical.py  indicators.py  option_chain.py
tests/: test_config_venom.py  test_indicators.py  test_instrument_config.py  test_risk.py  test_sandbox_regression.py  test_signals.py  test_spread.py  test_spread_sandbox.py  test_state.py  test_venom.py  test_venom_integration.py
tests/analysis/: test_eod_analyzer.py  test_goal_tracker.py  test_learning_journal.py
tests/backtest/: test_engine.py  test_simulator.py
tests/core/: test_persister.py
tests/dashboard/: test_console.py
tests/risk/: test_monthly.py
tests/strategy/: test_ohlc_signal.py  test_time_manager.py  test_trail_engine.py  test_vix_gate.py
(+20 files in other folders)
